--- a/rewe-app-fe/public/index.html
+++ b/rewe-app-fe/public/index.html
@@ -7,6 +7,7 @@
 		<base href="/" />
 
 		<meta name="color-scheme" content="light dark" />
+		<meta name="theme-color" content="#02EFD1" />
 		<meta
 			name="viewport"
 			content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -15,12 +16,6 @@
 		<meta name="msapplication-tap-highlight" content="no" />
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-		<link
-			rel="shortcut icon"
-			type="image/png"
-			href="%PUBLIC_URL%/assets/icon/favicon.png"
-		/>
 
 		<!-- add to homescreen for ios -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
